style(fix): nav bar alignment

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -5,17 +5,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
   ul {
     position: fixed;
     width: inherit;
     top: 50%;
+    padding-block: 4rem;
     transform: translateY(-50%);
     left: 0;
     background-color: var(--clr-neutral-900);
-    height: calc(70% - 2rem);
-    /* border: 1px solid red; */
-
+    /* height: calc(70% - 2rem); */
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
